Chore: fixed mobile layout issue in prod

--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,11 @@
     width: 70% !important;
     margin-left: 30px !important;
 }
+.css-feqhe6 {
+  position: absolute !important;
+  width: 70% !important;
+  margin-left: 30px !important;
+}
 .tss-9mgjcs-MUIDataTableToolbar-left.tss-9mgjcs-MUIDataTableToolbar-left {
   margin-top: 445px !important;
 }
@@ -115,6 +120,10 @@
   margin-top: 150px !important;
 }
 .css-3o29s4-MuiTypography-root{
+  display: none;
+}
+
+.css-1hldzep {
   display: none;
 }
 
